[gd_scene load_steps=6 format=3 uid="uid://cjq06vxkcccg3"]

[ext_resource type="Script" uid="uid://c6m26b4cjdy73" path="res://game/scenes/MenuScene.gd" id="1_3prin"]
[ext_resource type="Texture2D" uid="uid://ce05jm6hwuxpv" path="res://assets/sprites/menu-background.png" id="2_1mosf"]
[ext_resource type="Shader" uid="uid://dgsi12jv02r3j" path="res://assets/shader/Blur.gdshader" id="2_e7cpv"]
[ext_resource type="PackedScene" uid="uid://dc0roxex60i7i" path="res://game/ui/Button.tscn" id="6_sc8sk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g18ks"]
shader = ExtResource("2_e7cpv")
shader_parameter/blur_amount = 1.0000000475

[node name="MenuTemplate" type="CanvasLayer"]
script = ExtResource("1_3prin")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_g18ks")
position = Vector2(487, 263)
texture = ExtResource("2_1mosf")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 275.0
offset_right = 638.6667
offset_bottom = 450.33334
scale = Vector2(1.5, 1.5)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="TutorialButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("6_sc8sk")]
visible = false
layout_mode = 2
buttonText = "Tutorial"
buttonColor = Color(0.2, 0.21176471, 0.9098039, 1)

[node name="PlayButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("6_sc8sk")]
layout_mode = 2
buttonText = "Play"
buttonColor = Color(0.20020004, 0.2120302, 0.91, 1)

[node name="CreditsButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("6_sc8sk")]
layout_mode = 2
buttonText = "Credits"
buttonColor = Color(0.058333278, 0.7, 0, 1)

[node name="ExitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("6_sc8sk")]
layout_mode = 2
buttonText = "Exit"

[connection signal="onClick" from="CenterContainer/VBoxContainer/TutorialButton" to="." method="_on_play_button_on_click"]
[connection signal="onClick" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_on_click"]
[connection signal="onClick" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_on_click"]
